--- a/css/admin_style.css
+++ b/css/admin_style.css
@@ -1958,6 +1958,74 @@ body.login-body {
     transition: all 0.3s ease;
 }
 
+.modal-content {
+    padding: 30px;
+    background-color: white;
+    border-radius: 8px;
+    max-width: 600px;
+    margin: auto;
+}
+
+.btn {
+    background-color: #4F0003;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    display: inline-block;
+}
+
+.add-category-btn {
+    background-color: #10a75c;
+    color: white;
+    font-size: 14px;
+    padding: 6px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 10px;
+    vertical-align: middle;
+}
+
+.add-category-btn:hover {
+    background-color: #0077b3;
+}
+
+.close {
+    font-size: 30px;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+}
+
+h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+}
+
+label {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+input[type="text"], input[type="date"], select {
+    width: 100%;
+    padding: 12px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+input[type="file"] {
+    margin: 10px 0;
+}
+
 /* Responsive Adjustments */
 @media (max-width: 768px) {
     .org-member-editor,
