--- a/css/userheader.css
+++ b/css/userheader.css
@@ -19,7 +19,7 @@
 /* ========== HEADER LAYOUT ========== */
 header {
     width: 100%;
-    height: 100px;
+    height: 110px; /* Fixed height */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -28,8 +28,8 @@ header {
     left: 0;
     z-index: 99;
     background: #4F0003;
-    padding: 0 20px;
-}
+    }
+
 
 /* Logo Section */
 header .logo-container {
