--- a/css/user_header.css
+++ b/css/user_header.css
@@ -74,6 +74,41 @@ header .logo h3 {
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); /* Add subtle shadow for better contrast */
 }
 
+
+/* Style for the dropdown */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    text-decoration: none;
+    padding: 10px;
+    color: white;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #4F0003;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(255, 255, 255, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: white;
+    padding: 10px 12px;
+    text-decoration: none;
+    display: block;
+}
+
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 /* ========== SEARCH BOX ========== */
 header .search-box {
     flex: 0 0 30%;
